# AIFFEL_quest_eng

./: .gitignore  README.md
Computer_Vision/CV01/: cat.ipynb
Computer_Vision/CV01/camera_sticker/: camera.ipynb
Computer_Vision/CV02/: README.md  object_segment.ipynb
Data_Analysis/DA01/: bike.ipynb  macbook.ipynb
Data_Analysis/DA02/: .python-version  final_submission.ipynb  pyproject.toml
Data_Analysis/DA02/kaggle_kakr_housing/data/: submission.csv
Main_Quest/Quest01/: spaceship_titanic.ipynb
Python/Py01/: Sub_Quest_C_02.ipynb
Python/Py02/: Sub_QUEST_C_03_Py02.ipynb
Python/Py04/: projects.ipynb
Python/Py05/: account.ipynb  prompt.ipynb  rpg.ipynb
